# shar

./: .appveyor.yml  .clang-format  .env  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  Cargo.toml  LICENSE  README.md  appveyor.yml  build.rs  conanfile.py  conanfile.txt  readme.md
src/: CMakeLists.txt  CMakeLists.txt.orig  capture.rs  codec.rs  config.hpp  config.rs  decoder.cpp  decoder.hpp  disable_warnings_pop.hpp  disable_warnings_push.hpp  encoder.cpp  encoder.hpp  image.cpp  image.hpp  logger.hpp  main.cpp  main.rs  metrics.cpp  metrics.hpp  metrics_reporter.cpp  metrics_reporter.hpp  nal_encoder.cpp  nal_encoder.hpp  newtype.hpp  packet.cpp  packet.hpp  packet_sender.cpp  packet_sender.hpp  point.hpp  queue.hpp  resolve.rs  runner.hpp  signal_handler.cpp  signal_handler.hpp  size.hpp  state.rs  stream.rs  texture.cpp  texture.hpp  timer.hpp  (+3 more)
src/app/: CMakeLists.txt  app.cpp  app.hpp  broadcast.cpp  broadcast.hpp  counter.cpp  counter.hpp  main.cpp  main.cpp.orig  metrics_reporter.hpp  runner.cpp  view.cpp  view.hpp
src/capture/: CMakeLists.txt  capture.cpp  capture.hpp  frame.cpp  frame.hpp
src/capture/app/: CMakeLists.txt  app.cpp  main.cpp  runner.hpp  view.cpp  view.hpp
src/channels/: bounded.hpp  sink.hpp
src/client/: CMakeLists.txt  main.cpp  options.cpp
src/codec/: CMakeLists.txt  convert.cpp  convert.hpp  decoder.cpp  decoder.hpp  decoder.rs  encoder.cpp  encoder.hpp  encoder.rs  mod.rs  null.rs  unit.rs
src/codec/ffmpeg/: codec.cpp  codec.hpp  codec.rs  context.rs  decoder.rs  encoder.rs  error.rs  frame.cpp  frame.hpp  frame.rs  mod.rs  options.cpp  options.hpp  unit.cpp  unit.hpp  unit.rs
src/codecs/: convert.cpp  convert.hpp
src/codecs/ffmpeg/: decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp
src/codecs/h264/: decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp
src/codecs/openh264/: decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp
src/common/: CMakeLists.txt  atomic_string.cpp  atomic_string.hpp  bufwriter.cpp  bufwriter.hpp  byteorder.cpp  byteorder.hpp  bytes.hpp  bytes_ref.hpp  cancellation.cpp  cancellation.hpp  channel.hpp  config.cpp  config.hpp  context.hpp  counter.cpp  counter.hpp  disable_warnings_pop.hpp  disable_warnings_push.hpp  env.cpp  env.hpp  error_or.hpp  gauge.cpp  gauge.hpp  histogram.cpp  histogram.hpp  int.hpp  logger.cpp  logger.hpp  metric_collector.cpp  metric_collector.hpp  metric_description.hpp  metrics.cpp  metrics.hpp  metrics_context.hpp  options.cpp  options.hpp  png_image.cpp  png_image.hpp  png_reader.cpp  (+6 more)
src/common/metrics/: description.hpp  gauge.cpp  gauge.hpp  histogram.cpp  histogram.hpp  registry.cpp  registry.hpp
src/encoder/: CMakeLists.txt  convert.cpp  convert.hpp  encoder.cpp  encoder.cpp.orig  encoder.hpp  encoder.hpp.orig  ffmpeg.cpp  ffmpeg.hpp
src/encoder/ffmpeg/: avcodec.cpp  avcodec.hpp  avcontext.cpp  avcontext.hpp  codec.cpp  codec.cpp.orig  codec.hpp  codec_LOCAL_15952.cpp  codec_REMOTE_15952.cpp  frame.cpp  frame.hpp  options.cpp  options.hpp  unit.cpp  unit.hpp
src/net/: CMakeLists.txt  dns.cpp  dns.hpp  mod.rs  receiver.hpp  receiver_factory.cpp  receiver_factory.hpp  selune.rs  sender.hpp  sender_factory.cpp  sender_factory.hpp  stun.rs  types.hpp  url.cpp  url.hpp
src/net/ice/: candidate.cpp  candidate.hpp  client.cpp  client.hpp  forwarding.cpp  forwarding.hpp  mod.rs
src/net/rtcp/: app.cpp  app.hpp  block.cpp  block.hpp  bye.cpp  bye.hpp  header.cpp  header.hpp  receiver_report.cpp  receiver_report.hpp  sender_report.cpp  sender_report.hpp  source_description.cpp  source_description.hpp  source_items.cpp  source_items.hpp
src/net/rtp/: depacketizer.cpp  depacketizer.hpp  depacketizer.rs  fragment.cpp  fragment.hpp  fragment.rs  mod.rs  packet.cpp  packet.hpp  packet.rs  packetizer.cpp  packetizer.hpp  packetizer.rs  receiver.cpp  receiver.hpp  receiver.rs  sender.cpp  sender.hpp  sender.rs
src/net/rtsp/: header.cpp  header.hpp  parser.cpp  parser.hpp  request.cpp  request.hpp  request_error.hpp  response.cpp  response.hpp  rtsp_error.hpp  sender.cpp  sender.hpp  serializer.cpp  serializer.hpp  server.cpp  server.hpp  server.rs
src/net/stun/: attributes.cpp  attributes.hpp  client.cpp  error.hpp  message.cpp  message.hpp  request.cpp  request.hpp  stunc.cpp
src/net/tcp/: mod.rs  (+12 more)
src/network/: CMakeLists.txt  consts.hpp  forwarding.cpp  forwarding.hpp  fragment.cpp  fragment.hpp  module.hpp  network.cpp  network.hpp  packet.cpp  packet.hpp  packet_parser.cpp  packet_parser.hpp  packetizer.cpp  packetizer.hpp  receiver.hpp  receiver_factory.cpp  receiver_factory.hpp  rtp.cpp  rtp.hpp  sender.hpp  sender_factory.cpp  sender_factory.hpp  tcp.cpp  tcp.hpp  url.cpp  url.hpp
src/primitives/: frame.cpp  frame.hpp  image.cpp  image.hpp  size.hpp  timer.hpp
src/processors/: capture_frame_provider.cpp  capture_frame_provider.hpp  display.cpp  display.hpp  frame_display.hpp  frame_file_reader.cpp  frame_file_reader.hpp  frame_file_writer.cpp  frame_file_writer.hpp  h264decoder.cpp  h264decoder.hpp  h264encoder.cpp  h264encoder.hpp  packet_forwarder.cpp  packet_forwarder.hpp  packet_receiver.cpp  packet_receiver.hpp  packet_sender.cpp  packet_sender.hpp  processor.cpp  processor.hpp  screen_capture.cpp  screen_capture.hpp  sink.hpp  source.hpp
src/proto/: CMakeLists.txt  protocol.proto
src/queues/: frames_queue.hpp  null_queue.hpp  packets_queue.hpp  queue.hpp
src/sender/: CMakeLists.txt
src/server/: CMakeLists.txt  main.cpp  server.cpp  server.hpp
src/ui/: CMakeLists.txt  app.hpp  app.rs  button.cpp  config.rs  display.cpp  display.hpp  frame.cpp  frame.hpp  gl_vtable.cpp  gl_vtable.hpp  message_box.cpp  message_box.hpp  mod.rs  nk.cpp  nk.hpp  point.hpp  rect.hpp  renderer.cpp  renderer.hpp  sdl_backend.cpp  sdl_backend.hpp  startup_screen.cpp  startup_screen.hpp  state.cpp  state.hpp  text_edit.cpp  text_edit.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
src/utils/: CMakeLists.txt  ffmpeg_test.cpp  full_pipeline_test.cpp  latency.cpp  newtype.hpp  play.cpp  record.cpp
utils/: CMakeLists.txt  latency.cpp  play.cpp
(+148 files in other folders)
