[package]
name = "shar"
version = "0.1.0"
authors = ["0xd34d10cc <0xd34d10cc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.1.1", features = ["image", "tokio"] }
scrap = "0.5.0"
anyhow = "1.0.31"
tokio = { version = "0.2.21", features = ["time", "sync", "stream", "dns", "tcp", "udp", "io-util"] }
log = "0.4.8"
env_logger = "0.7.1"
dotenv = "0.15.0"
iced_native = "0.2.2"
futures = "0.3.5"
image = { version = "0.22", features = ["png"] }
url = "2.1.1"
bytes = "0.5.4"
once_cell = "1.4.0"
ffmpeg-sys-next = { git = "https://github.com/0xd34d10cc/rust-ffmpeg-sys", branch = "vcpkg", default-features = false, features = ["static", "avcodec"] }
num-integer = "0.1.43"
libc = "0.2.71"
zerocopy = "0.3.0"
byteorder = "1.3.4"
